# parallel-computing

./: CMakeLists.txt  Readme.MD  matrizes.c
include/: master_slave.h  work_pool.h
src/: master_slave.c  work_pool.c
